--- a/thrift_marketplace/requirements.txt
+++ b/thrift_marketplace/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 certifi==2022.12.7
 charset-normalizer==2.1.1
+cloudinary==1.30.0
 Django==4.1.4
 django-mailjet==0.3.1
 idna==3.4
@@ -8,6 +9,7 @@ mailjet-rest==1.3.4
 Pillow==9.3.0
 psycopg2==2.9.5
 requests==2.28.1
+six==1.16.0
 sqlparse==0.4.3
 tzdata==2022.7
 urllib3==1.26.13
